--- a/LeetCode/LeetCode.csproj
+++ b/LeetCode/LeetCode.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,10 +44,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DynamicProgramming.cs" />
+    <Compile Include="BinaryTreeCousin.cs" />
+    <Compile Include="BrokenCalculator.cs" />
+    <Compile Include="CheapestTicket.cs" />
+    <Compile Include="ClosestToOrigin.cs" />
+    <Compile Include="CoinChange.cs" />
+    <Compile Include="CombinationSum.cs" />
+    <Compile Include="JumpGame.cs" />
+    <Compile Include="FibonacciFrog.cs" />
+    <Compile Include="FruitCollection.cs" />
+    <Compile Include="GameOfLife.cs" />
+    <Compile Include="HouseRobber1.cs" />
+    <Compile Include="Lexicographic Permutation.cs" />
+    <Compile Include="LongestPalindrome.cs" />
+    <Compile Include="MinimumPathSum.cs" />
+    <Compile Include="MyCalendar.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SlidingWindow.cs" />
+    <Compile Include="LongestSubstringWithoutRepeatChar.cs" />
+    <Compile Include="SplitArray.cs" />
+    <Compile Include="TwoSum.cs" />
     <Compile Include="WaterContainer.cs" />
   </ItemGroup>
   <ItemGroup>
