--- a/LeetCode/LeetCode.csproj
+++ b/LeetCode/LeetCode.csproj
@@ -48,6 +48,7 @@
     <Compile Include="BrokenCalculator.cs" />
     <Compile Include="CheapestTicket.cs" />
     <Compile Include="ClosestToOrigin.cs" />
+    <Compile Include="Codility.cs" />
     <Compile Include="CoinChange.cs" />
     <Compile Include="CombinationSum.cs" />
     <Compile Include="JumpGame.cs" />
@@ -64,7 +65,9 @@
     <Compile Include="LongestSubstringWithoutRepeatChar.cs" />
     <Compile Include="SplitArray.cs" />
     <Compile Include="TwoSum.cs" />
+    <Compile Include="UniquePaths.cs" />
     <Compile Include="WaterContainer.cs" />
+    <Compile Include="WordBreak.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
