--- a/LeetCode/LeetCode.csproj
+++ b/LeetCode/LeetCode.csproj
@@ -48,9 +48,9 @@
     <Compile Include="BrokenCalculator.cs" />
     <Compile Include="CheapestTicket.cs" />
     <Compile Include="ClosestToOrigin.cs" />
+    <Compile Include="CodilityTest.cs" />
     <Compile Include="CoinChange.cs" />
     <Compile Include="CombinationSum.cs" />
-    <Compile Include="CodilityTest.cs" />
     <Compile Include="JumpGame.cs" />
     <Compile Include="FibonacciFrog.cs" />
     <Compile Include="FruitCollection.cs" />
@@ -61,6 +61,7 @@
     <Compile Include="MinimumPathSum.cs" />
     <Compile Include="MyCalendar.cs" />
     <Compile Include="Particles.cs" />
+    <Compile Include="PerfectSquares.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LongestSubstringWithoutRepeatChar.cs" />
